--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@supabase/auth-helpers-nextjs": "^0.8.7",
     "@supabase/supabase-js": "^2.39.3",
     "clsx": "^2.1.0",
+    "groq-sdk": "^0.12.0",
     "next": "14.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -28,4 +29,4 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   }
-} 
+}
